--- a/sfytj/src/html/common/index.html
+++ b/sfytj/src/html/common/index.html
@@ -8,7 +8,7 @@
         </title>
         <link href="/sfytj/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <link href="/sfytj/dist/styles/main.min.css" rel="stylesheet" type="text/css"/>
-        <link href="/sfytj/bower_components/jquery/dist/jquery-ui.css" rel="stylesheet"/>.0
+        <link href="/sfytj/bower_components/jquery/dist/jquery-ui.css" rel="stylesheet"/>
         <script for=phone event=OnPhoneOn language="JavaScript">
      console.log('phoneon');
 
